<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/add_city"
            android:padding="15dp"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/current_weather_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Cidade" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/white_translucent"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityName"
                tools:text="nublado" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionText"
                android:layout_margin="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/dark_purple"
                app:cardCornerRadius="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        app:layout_constraintEnd_toStartOf="@+id/image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="30" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:src="@drawable/ic_celsius"
                        app:layout_constraintStart_toEndOf="@+id/tempText"
                        app:layout_constraintTop_toTopOf="@+id/tempText" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_clear_sunny"
                        app:layout_constraintBottom_toBottomOf="@+id/maxTempText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tempText" />

                    <TextView
                        android:id="@+id/feelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white_translucent"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/tempText"
                        app:layout_constraintStart_toStartOf="@+id/tempText"
                        app:layout_constraintTop_toBottomOf="@+id/tempText"
                        tools:text="Sensação: 30ºC" />

                    <TextView
                        android:id="@+id/minTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white_translucent"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/tempText"
                        app:layout_constraintStart_toStartOf="@+id/tempText"
                        app:layout_constraintTop_toBottomOf="@+id/feelsLike"
                        tools:text="Mín: 22ºC" />

                    <TextView
                        android:id="@+id/maxTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white_translucent"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/tempText"
                        app:layout_constraintStart_toStartOf="@+id/tempText"
                        app:layout_constraintTop_toBottomOf="@+id/minTempText"
                        tools:text="Máx: 30ºC" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/current_weather_details_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/maxTempText"
                        tools:itemCount="4"
                        tools:listitem="@layout/item_main_details" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nextForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/next_forecast"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_forecast_details_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextForecast"
                tools:itemCount="4"
                tools:listitem="@layout/item_forecast_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressbarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>